# spotify_downloader

./: .pre-commit-config.yaml  README.md  credentials.json  pyproject.toml
src/: config.py  main.py  utility.py
